Expanded configuration and language tools
- Shared configuration menus support typed TOML editing
- TOML edits preserve comments and unrelated settings
- Hot reload protects editor saves from stale file changes
- Partial translations use English for missing or invalid entries
- Language tools support grouped TOML, editing guides and custom menu layouts
- Downloads install language files directly without a separate cache